=== To be released:

* Changed line widths to 1.0 to avoid invisible node boundaries with older
  versions of Graphviz.
* Added option to exclude indirect relationships (exclude_indirect).
* Slightly altered the type descriptions of attributes.

=== 0.2.0

* Added simple way to create your own type of diagrams with a tiny amount of
  code.
* Improved internal API and documentation.
* Subtle changes in diagram style.
* Fixed error where non-mutual relationships might be inadvertently classified
  as indirect relationships.
* Fixed error where diagrams with a vertical layout might fail to be generated.

=== 0.1.1

* Fixed small errors in Ruby 1.8.7.
* Abort generation of diagrams when there are no models.

=== 0.1.0

* Released on September 20th, 2010.
* First public release.